src/test/ui/reachable/expr_box.stderr
error: unreachable expression
  --> $DIR/expr_box.rs:6:13
   |
LL |     let x = box return;
   |             ^^^^------
   |             |   |
   |             |   any code following this expression is unreachable
   |             unreachable expression
   |
note: the lint level is defined here
  --> $DIR/expr_box.rs:3:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^

error: aborting due to previous error

